src/test/ui/regions/regions-close-over-type-parameter-1.nll.stderr
error[E0310]: the parameter type `A` may not live long enough
  --> $DIR/regions-close-over-type-parameter-1.rs:10:5
   |
LL |     box v as Box<dyn SomeTrait + 'static>
   |     ^^^^^
   |
   = help: consider adding an explicit lifetime bound `A: 'static`...

error[E0309]: the parameter type `A` may not live long enough
  --> $DIR/regions-close-over-type-parameter-1.rs:20:5
   |
LL |     box v as Box<dyn SomeTrait + 'b>
   |     ^^^^^
   |
   = help: consider adding an explicit lifetime bound `A: 'b`...

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0309, E0310.
For more information about an error, try `rustc --explain E0309`.
